# LocalScribe

./: .gitignore  LICENSE  README.md  Whisper Transcribe.bat  Whisper Transcribe.command  build.py  pyproject.toml
.claude/: settings.local.json
whisper_transcribe/: __init__.py  app.py  constants.py  transcribe.py
